update explore data

--- a/1_explore_data.ipynb
+++ b/1_explore_data.ipynb
@@ -354,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape data:      (8693, 19)\n",
+      "shape data: (8693, 19)\n",
       "\n",
       "8693 * 0.8 = 6954.400000000001\n",
       "shape X_y_train: (6954, 19)\n",
@@ -367,7 +367,7 @@
    "source": [
     "X_y_train, X_y_test  = train_test_split(data, test_size=0.2, random_state=123, shuffle=True)\n",
     "\n",
-    "print(f\"shape data:      {data.shape}\")\n",
+    "print(f\"shape data: {data.shape}\")\n",
     "\n",
     "print(f\"\\n{data.shape[0]} * 0.8 = {data.shape[0] * 0.8}\")\n",
     "print(f\"shape X_y_train: {X_y_train.shape}\")\n",
@@ -621,6 +621,13 @@
     }
    ],
    "source": [
+    "# Test set\n",
+    "X_y_test[\"amenities_sum\"] = X_y_test[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].sum(axis=1)\n",
+    "X_y_test[\"amenities_mean\"] = X_y_test[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].mean(axis=1)\n",
+    "X_y_test[\"amenities_min\"] = X_y_test[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].min(axis=1)\n",
+    "X_y_test[\"amenities_max\"] = X_y_test[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].max(axis=1)\n",
+    "\n",
+    "# Train set\n",
     "X_y_train[\"amenities_sum\"] = X_y_train[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].sum(axis=1)\n",
     "X_y_train[\"amenities_mean\"] = X_y_train[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].mean(axis=1)\n",
     "X_y_train[\"amenities_min\"] = X_y_train[[\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]].min(axis=1)\n",
@@ -795,6 +802,8 @@
    "source": [
     "bins = [-np.inf, 0, 1450, np.inf]\n",
     "names = [\"low\", \"medium\", \"high\"]\n",
+    "\n",
+    "X_y_test.loc[:, \"amenities_sum_bin\"] = pd.cut(X_y_test.amenities_sum, bins=bins, labels=names)\n",
     "\n",
     "X_y_train.loc[:, \"amenities_sum_bin\"] = pd.cut(X_y_train.amenities_sum, bins=bins, labels=names)\n",
     "\n",
@@ -1211,6 +1220,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test set\n",
+    "X_y_test.loc[:, \"group_size\"] = np.nan\n",
+    "\n",
+    "X_y_test.loc[X_y_test.group_n.isin([\"01\"]), \"group_size\"] = \"g1\"\n",
+    "X_y_test.loc[X_y_test.group_n.isin([\"02\"]), \"group_size\"] = \"g2\"\n",
+    "X_y_test.loc[X_y_test.group_n.isin([\"03\"]), \"group_size\"] = \"g3\"\n",
+    "X_y_test.loc[X_y_test.group_n.isin([\"04\", \"05\", \"06\", \"07\", \"08\"]), \"group_size\"] = \"gN\"\n",
+    "\n",
+    "# Train set\n",
     "X_y_train.loc[:, \"group_size\"] = np.nan\n",
     "\n",
     "X_y_train.loc[X_y_train.group_n.isin([\"01\"]), \"group_size\"] = \"g1\"\n",
@@ -1221,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1333,7 @@
        "7      08         gN     11"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1445,13 +1463,64 @@
        "08             NaN     NaN    NaN   11.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ct1.pivot(index=\"group_n\", columns=\"group_size\", values=\"count\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set:\n",
+      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
+      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
+      "       'Name', 'Transported', 'group', 'group_n', 'deck', 'num', 'side',\n",
+      "       'amenities_sum', 'amenities_mean', 'amenities_min', 'amenities_max',\n",
+      "       'amenities_sum_bin', 'group_size'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Train set:\n",
+      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
+      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
+      "       'Name', 'Transported', 'group', 'group_n', 'deck', 'num', 'side',\n",
+      "       'amenities_sum', 'amenities_mean', 'amenities_min', 'amenities_max',\n",
+      "       'amenities_sum_bin', 'group_size'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Same columns?\n",
+    "print(f\"Test set:\\n{X_y_test.columns}\")\n",
+    "print(f\"\\nTrain set:\\n{X_y_train.columns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\")\n",
+    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\")"
    ]
   }
  ],
