--- a/1_explore_data.ipynb
+++ b/1_explore_data.ipynb
@@ -1519,8 +1519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\")\n",
-    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\")"
+    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\", index=False)\n",
+    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\", index=False)"
    ]
   }
  ],
