--- a/1_explore_data.ipynb
+++ b/1_explore_data.ipynb
@@ -1173,7 +1173,7 @@
     "- `amenities_sum` and `amenities_mean` are strongly correlated.\n",
     "- `amenities_max` is also correlated with `amenities_sum` and `amenities_mean`.\n",
     "\n",
-    "`amenities_max`, `amenities_sum` and `amenities_mean` are probably equivalent, so I'll use `amenities_mean`."
+    "`amenities_max`, `amenities_sum` and `amenities_mean` are probably equivalent, so I'll use `amenities_sum`."
    ]
   },
   {
@@ -2056,57 +2056,6 @@
    ],
    "source": [
     "ct1.pivot(index=\"group_size\", columns=\"group_size_bin\", values=\"count\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Export data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test set:\n",
-      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
-      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
-      "       'Name', 'Transported', 'group', 'group_n', 'group_size', 'deck', 'num',\n",
-      "       'side', 'amenities_sum', 'amenities_mean', 'amenities_min',\n",
-      "       'amenities_max', 'amenities_sum_bin', 'group_size_bin'],\n",
-      "      dtype='object')\n",
-      "\n",
-      "Train set:\n",
-      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
-      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
-      "       'Name', 'Transported', 'group', 'group_n', 'group_size', 'deck', 'num',\n",
-      "       'side', 'amenities_sum', 'amenities_mean', 'amenities_min',\n",
-      "       'amenities_max', 'amenities_sum_bin', 'group_size_bin'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Same columns?\n",
-    "print(f\"Test set:\\n{X_y_test.columns}\")\n",
-    "print(f\"\\nTrain set:\\n{X_y_train.columns}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\", index=False)\n",
-    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\", index=False)"
    ]
   }
  ],
