--- a/2_model_XX.ipynb
+++ b/2_model_XX.ipynb
@@ -88,9 +88,9 @@
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, f1_score\n",
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "# from sklearn.model_selection import GridSearchCV, StratifiedShuffleSplit\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "np.random.seed(123)\n",
     "\n",
@@ -120,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (8693, 14)\n"
+      "Shape: (6954, 16)\n"
      ]
     }
    ],
@@ -132,9 +132,9 @@
     "\n",
     "# Load dataset\n",
     "dataset_path = Path().absolute() / \"data\"\n",
-    "filename = \"train.csv\"\n",
-    "data_loaded = load_ds(dataset_path, filename)\n",
-    "print(f\"Shape: {data_loaded.shape}\")"
+    "filename = \"X_y_train.csv\"\n",
+    "X_y_train = load_ds(dataset_path, filename)\n",
+    "print(f\"Shape: {X_y_train.shape}\")"
    ]
   },
   {
@@ -146,15 +146,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
-      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
-      "       'Name', 'Transported'],\n",
+      "Index(['Unnamed: 0', 'index', 'PassengerId', 'HomePlanet', 'CryoSleep',\n",
+      "       'Cabin', 'Destination', 'Age', 'VIP', 'RoomService', 'FoodCourt',\n",
+      "       'ShoppingMall', 'Spa', 'VRDeck', 'Name', 'Transported'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "print(data_loaded.columns)"
+    "print(X_y_train.columns)"
    ]
   },
   {
@@ -167,31 +167,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 8693 entries, 0 to 8692\n",
-      "Data columns (total 14 columns):\n",
+      "RangeIndex: 6954 entries, 0 to 6953\n",
+      "Data columns (total 16 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   PassengerId   8693 non-null   object \n",
-      " 1   HomePlanet    8492 non-null   object \n",
-      " 2   CryoSleep     8476 non-null   object \n",
-      " 3   Cabin         8494 non-null   object \n",
-      " 4   Destination   8511 non-null   object \n",
-      " 5   Age           8514 non-null   float64\n",
-      " 6   VIP           8490 non-null   object \n",
-      " 7   RoomService   8512 non-null   float64\n",
-      " 8   FoodCourt     8510 non-null   float64\n",
-      " 9   ShoppingMall  8485 non-null   float64\n",
-      " 10  Spa           8510 non-null   float64\n",
-      " 11  VRDeck        8505 non-null   float64\n",
-      " 12  Name          8493 non-null   object \n",
-      " 13  Transported   8693 non-null   bool   \n",
-      "dtypes: bool(1), float64(6), object(7)\n",
-      "memory usage: 891.5+ KB\n"
+      " 0   Unnamed: 0    6954 non-null   int64  \n",
+      " 1   index         6954 non-null   int64  \n",
+      " 2   PassengerId   6954 non-null   object \n",
+      " 3   HomePlanet    6789 non-null   object \n",
+      " 4   CryoSleep     6782 non-null   object \n",
+      " 5   Cabin         6795 non-null   object \n",
+      " 6   Destination   6805 non-null   object \n",
+      " 7   Age           6809 non-null   float64\n",
+      " 8   VIP           6800 non-null   object \n",
+      " 9   RoomService   6801 non-null   float64\n",
+      " 10  FoodCourt     6796 non-null   float64\n",
+      " 11  ShoppingMall  6788 non-null   float64\n",
+      " 12  Spa           6808 non-null   float64\n",
+      " 13  VRDeck        6809 non-null   float64\n",
+      " 14  Name          6786 non-null   object \n",
+      " 15  Transported   6954 non-null   bool   \n",
+      "dtypes: bool(1), float64(6), int64(2), object(7)\n",
+      "memory usage: 821.8+ KB\n"
      ]
     }
    ],
    "source": [
-    "data_loaded.info()"
+    "X_y_train.info()"
    ]
   },
   {
@@ -211,26 +213,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape data: (8693, 14)\n",
-      "\n",
-      "8693 * 0.8 = 6954.400000000001\n",
-      "shape X_y_train: (6954, 14)\n",
-      "\n",
-      "8693 * 0.2 = 1738.6000000000001\n",
-      "shape X_y_test:  (1739, 14)\n"
+      "shape X_y_train: (6954, 16)\n"
      ]
     }
    ],
    "source": [
-    "X_y_train, X_y_test  = train_test_split(data_loaded, test_size=0.2, random_state=123, shuffle=True)\n",
-    "\n",
-    "print(f\"shape data: {data_loaded.shape}\")\n",
-    "\n",
-    "print(f\"\\n{data_loaded.shape[0]} * 0.8 = {data_loaded.shape[0] * 0.8}\")\n",
-    "print(f\"shape X_y_train: {X_y_train.shape}\")\n",
-    "\n",
-    "print(f\"\\n{data_loaded.shape[0]} * 0.2 = {data_loaded.shape[0] * 0.2}\")\n",
-    "print(f\"shape X_y_test:  {X_y_test.shape}\")"
+    "print(f\"shape X_y_train: {X_y_train.shape}\")"
    ]
   },
   {
@@ -242,10 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape X_train: (6954, 13)\n",
-      "shape y_train: (6954,)\n",
-      "shape X_test: (1739, 13)\n",
-      "shape y_test: (1739,)\n"
+      "shape X_train: (6954, 15)\n",
+      "shape y_train: (6954,)\n"
      ]
     }
    ],
@@ -254,15 +240,8 @@
     "X_train = X_y_train.drop([\"Transported\"], axis=1)\n",
     "y_train = X_y_train.loc[:, \"Transported\"].copy()\n",
     "\n",
-    "# NOTE: \"drop()\" create a copy of the data original dataset\n",
-    "X_test = X_y_test.drop([\"Transported\"], axis=1)\n",
-    "y_test = X_y_test.loc[:, \"Transported\"].copy()\n",
-    "\n",
     "print(f\"shape X_train: {X_train.shape}\")\n",
-    "print(f\"shape y_train: {y_train.shape}\")\n",
-    "\n",
-    "print(f\"shape X_test: {X_test.shape}\")\n",
-    "print(f\"shape y_test: {y_test.shape}\")"
+    "print(f\"shape y_train: {y_train.shape}\")"
    ]
   },
   {
@@ -408,20 +387,22 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 6954 entries, 0 to 6953\n",
-      "Data columns (total 9 columns):\n",
+      "Data columns (total 11 columns):\n",
       " #   Column             Non-Null Count  Dtype   \n",
       "---  ------             --------------  -----   \n",
-      " 0   HomePlanet         6789 non-null   category\n",
-      " 1   CryoSleep          6782 non-null   object  \n",
-      " 2   Destination        6805 non-null   category\n",
-      " 3   Age                6809 non-null   float64 \n",
-      " 4   VIP                6800 non-null   object  \n",
-      " 5   group_size_bin     6954 non-null   category\n",
-      " 6   deck               6795 non-null   category\n",
-      " 7   side               6795 non-null   category\n",
-      " 8   amenities_sum_bin  6954 non-null   category\n",
-      "dtypes: category(6), float64(1), object(2)\n",
-      "memory usage: 259.1+ KB\n"
+      " 0   Unnamed: 0         6954 non-null   int64   \n",
+      " 1   index              6954 non-null   int64   \n",
+      " 2   HomePlanet         6789 non-null   category\n",
+      " 3   CryoSleep          6782 non-null   object  \n",
+      " 4   Destination        6805 non-null   category\n",
+      " 5   Age                6809 non-null   float64 \n",
+      " 6   VIP                6800 non-null   object  \n",
+      " 7   group_size_bin     6954 non-null   category\n",
+      " 8   deck               6795 non-null   category\n",
+      " 9   side               6795 non-null   category\n",
+      " 10  amenities_sum_bin  6954 non-null   category\n",
+      "dtypes: category(6), float64(1), int64(2), object(2)\n",
+      "memory usage: 367.8+ KB\n"
      ]
     }
    ],
@@ -439,6 +420,8 @@
     {
      "data": {
       "text/plain": [
+       "Unnamed: 0             0\n",
+       "index                  0\n",
        "HomePlanet           165\n",
        "CryoSleep            172\n",
        "Destination          149\n",
@@ -479,15 +462,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               Age\n",
-      "count  6809.000000\n",
-      "mean     28.767367\n",
-      "std      14.479764\n",
-      "min       0.000000\n",
-      "25%      19.000000\n",
-      "50%      27.000000\n",
-      "75%      37.000000\n",
-      "max      79.000000\n"
+      "        Unnamed: 0        index          Age\n",
+      "count  6954.000000  6954.000000  6809.000000\n",
+      "mean   3476.500000  4337.655738    28.767367\n",
+      "std    2007.591218  2510.392605    14.479764\n",
+      "min       0.000000     0.000000     0.000000\n",
+      "25%    1738.250000  2170.250000    19.000000\n",
+      "50%    3476.500000  4318.000000    27.000000\n",
+      "75%    5214.750000  6524.750000    37.000000\n",
+      "max    6953.000000  8692.000000    79.000000\n"
      ]
     }
    ],
@@ -617,6 +600,8 @@
     {
      "data": {
       "text/plain": [
+       "Unnamed: 0             0\n",
+       "index                  0\n",
        "HomePlanet           165\n",
        "CryoSleep            172\n",
        "Destination          149\n",
@@ -864,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline model"
+    "# Baseline model (log regression)"
    ]
   },
   {
@@ -1016,28 +1001,95 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7364106988783434"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy_score(y_train, y_pred_baseline)"
+    "def add_metrics(dictionary, y, y_pred, mod_name):\n",
+    "    # dictionary: a dictionary to which the metrics are added\n",
+    "\n",
+    "    acc = accuracy_score(y, y_pred)\n",
+    "    cm = confusion_matrix(y, y_pred)\n",
+    "    precision = precision_score(y, y_pred)\n",
+    "    recall = recall_score(y, y_pred)\n",
+    "    f1 = f1_score(y, y_pred)\n",
+    "\n",
+    "    dictionary[mod_name] = {\n",
+    "        \"accuracy\": np.round(acc, 3),\n",
+    "        \"confusion_matrix\": cm,\n",
+    "        \"precision\": np.round(precision, 3),\n",
+    "        \"recall\": np.round(recall, 3),\n",
+    "        \"f1_score\": np.round(f1, 3)\n",
+    "    }\n",
+    "\n",
+    "    return dictionary\n",
+    "\n",
+    "\n",
+    "def print_metrics(m):\n",
+    "    print(f\"Accuracy is {m['accuracy']}.\")\n",
+    "    print(f\"When the model claims a passenger was transported to another dimension, it is correct {m['precision']*100} % of the time (precision).\")\n",
+    "    print(f\"The model detects {m['recall']*100} % of the passengers that were transported to another dimension (recall).\")\n",
+    "    print(f\"The F1 score is {m['f1_score']*100}.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def display_cm(cm):\n",
+    "    # cm: a confusion matrix\n",
+    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
+    "    disp.plot()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_score = dict()\n",
+    "models_score = add_metrics(models_score, y_train, y_pred_baseline, \"baseline\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is 0.736.\n",
+      "When the model claims a passenger was transported to another dimension, it is correct 77.8 % of the time (precision).\n",
+      "The model detects 66.4 % of the passengers that were transported to another dimension (recall).\n",
+      "The F1 score is 71.7.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_metrics(models_score[\"baseline\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1047,19 +1099,18 @@
        "       [1171, 2319]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cm_baseline = confusion_matrix(y_train, y_pred_baseline)\n",
-    "cm_baseline"
+    "models_score[\"baseline\"][\"confusion_matrix\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1076,9 +1127,7 @@
     }
    ],
    "source": [
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm_baseline)\n",
-    "disp.plot()\n",
-    "plt.show()"
+    "display_cm(models_score[\"baseline\"][\"confusion_matrix\"])"
    ]
   }
  ],
