--- a/1_explore_data.ipynb
+++ b/1_explore_data.ipynb
@@ -133,18 +133,18 @@
       "shape data: (8693, 14)\n",
       "\n",
       "8693 * 0.8 = 6954.400000000001\n",
-      "shape X_y_train: (6954, 15)\n",
+      "shape X_y_train: (6954, 14)\n",
       "\n",
       "8693 * 0.2 = 1738.6000000000001\n",
-      "shape X_y_test:  (1739, 15)\n"
+      "shape X_y_test:  (1739, 14)\n"
      ]
     }
    ],
    "source": [
     "X_y_train, X_y_test = train_test_split(data, test_size=0.2, random_state=123, shuffle=True)\n",
     "\n",
-    "X_y_train = X_y_train.reset_index()\n",
-    "X_y_test = X_y_test.reset_index()\n",
+    "X_y_train = X_y_train.reset_index(drop=True)\n",
+    "X_y_test = X_y_test.reset_index(drop=True)\n",
     "\n",
     "print(f\"shape data: {data.shape}\")\n",
     "\n",
@@ -169,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_y_train.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\")\n",
-    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\")"
+    "X_y_train.to_csv(Path().absolute() / \"data\" / \"X_y_train.csv\", index=False)\n",
+    "X_y_test.to_csv(Path().absolute() / \"data\" / \"X_y_test.csv\", index=False)"
    ]
   },
   {
@@ -787,10 +787,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['index', 'PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin',\n",
-      "       'Destination', 'Age', 'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall',\n",
-      "       'Spa', 'VRDeck', 'Name', 'Transported', 'group', 'group_n',\n",
-      "       'group_size', 'deck', 'num', 'side'],\n",
+      "Index(['PassengerId', 'HomePlanet', 'CryoSleep', 'Cabin', 'Destination', 'Age',\n",
+      "       'VIP', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck',\n",
+      "       'Name', 'Transported', 'group', 'group_n', 'group_size', 'deck', 'num',\n",
+      "       'side'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -816,28 +816,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   index PassengerId HomePlanet CryoSleep     Cabin  Destination   Age    VIP  \\\n",
-      "0   7074     7527_01      Earth     False  F/1561/P  TRAPPIST-1e  18.0  False   \n",
-      "1   6710     7083_01     Europa      True   C/259/S  TRAPPIST-1e  32.0  False   \n",
-      "2   2569     2755_01     Europa      True    B/85/P  55 Cancri e  36.0  False   \n",
-      "3   3850     4127_01     Europa       NaN   B/130/P  TRAPPIST-1e  23.0  False   \n",
-      "4   7450     7972_02     Europa     False   B/260/P  TRAPPIST-1e  35.0  False   \n",
+      "  PassengerId HomePlanet CryoSleep     Cabin  Destination   Age    VIP  \\\n",
+      "0     7527_01      Earth     False  F/1561/P  TRAPPIST-1e  18.0  False   \n",
+      "1     7083_01     Europa      True   C/259/S  TRAPPIST-1e  32.0  False   \n",
+      "2     2755_01     Europa      True    B/85/P  55 Cancri e  36.0  False   \n",
+      "3     4127_01     Europa       NaN   B/130/P  TRAPPIST-1e  23.0  False   \n",
+      "4     7972_02     Europa     False   B/260/P  TRAPPIST-1e  35.0  False   \n",
       "\n",
-      "   RoomService  FoodCourt  ...   Spa  VRDeck               Name Transported  \\\n",
-      "0          0.0      732.0  ...  13.0    47.0    Elle Flowensley        True   \n",
-      "1          0.0        0.0  ...   0.0     0.0    Betenar Pirejus        True   \n",
-      "2          0.0        0.0  ...   0.0     0.0  Beneba Glousspidy        True   \n",
-      "3          0.0        0.0  ...   0.0     NaN     Dsch Ainserfle        True   \n",
-      "4          NaN      246.0  ...  42.0  3730.0   Atinon Cattyried       False   \n",
+      "   RoomService  FoodCourt  ShoppingMall   Spa  VRDeck               Name  \\\n",
+      "0          0.0      732.0           2.0  13.0    47.0    Elle Flowensley   \n",
+      "1          0.0        0.0           0.0   0.0     0.0    Betenar Pirejus   \n",
+      "2          0.0        0.0           0.0   0.0     0.0  Beneba Glousspidy   \n",
+      "3          0.0        0.0           0.0   0.0     NaN     Dsch Ainserfle   \n",
+      "4          NaN      246.0          25.0  42.0  3730.0   Atinon Cattyried   \n",
       "\n",
-      "   group group_n group_size  deck   num side  \n",
-      "0   7527      01          1     F  1561    P  \n",
-      "1   7083      01          2     C   259    S  \n",
-      "2   2755      01          1     B    85    P  \n",
-      "3   4127      01          1     B   130    P  \n",
-      "4   7972      02          1     B   260    P  \n",
-      "\n",
-      "[5 rows x 21 columns]\n"
+      "   Transported group group_n  group_size deck   num side  \n",
+      "0         True  7527      01           1    F  1561    P  \n",
+      "1         True  7083      01           2    C   259    S  \n",
+      "2         True  2755      01           1    B    85    P  \n",
+      "3         True  4127      01           1    B   130    P  \n",
+      "4        False  7972      02           1    B   260    P  \n"
      ]
     }
    ],
@@ -856,32 +854,31 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 6954 entries, 0 to 6953\n",
-      "Data columns (total 21 columns):\n",
+      "Data columns (total 20 columns):\n",
       " #   Column        Non-Null Count  Dtype   \n",
       "---  ------        --------------  -----   \n",
-      " 0   index         6954 non-null   int64   \n",
-      " 1   PassengerId   6954 non-null   object  \n",
-      " 2   HomePlanet    6789 non-null   object  \n",
-      " 3   CryoSleep     6782 non-null   object  \n",
-      " 4   Cabin         6795 non-null   object  \n",
-      " 5   Destination   6805 non-null   object  \n",
-      " 6   Age           6809 non-null   float64 \n",
-      " 7   VIP           6800 non-null   object  \n",
-      " 8   RoomService   6801 non-null   float64 \n",
-      " 9   FoodCourt     6796 non-null   float64 \n",
-      " 10  ShoppingMall  6788 non-null   float64 \n",
-      " 11  Spa           6808 non-null   float64 \n",
-      " 12  VRDeck        6809 non-null   float64 \n",
-      " 13  Name          6786 non-null   object  \n",
-      " 14  Transported   6954 non-null   bool    \n",
-      " 15  group         6954 non-null   object  \n",
-      " 16  group_n       6954 non-null   object  \n",
-      " 17  group_size    6954 non-null   int64   \n",
-      " 18  deck          6795 non-null   category\n",
-      " 19  num           6795 non-null   string  \n",
-      " 20  side          6795 non-null   category\n",
-      "dtypes: bool(1), category(2), float64(6), int64(2), object(9), string(1)\n",
-      "memory usage: 1.3+ MB\n",
+      " 0   PassengerId   6954 non-null   object  \n",
+      " 1   HomePlanet    6789 non-null   object  \n",
+      " 2   CryoSleep     6782 non-null   object  \n",
+      " 3   Cabin         6795 non-null   object  \n",
+      " 4   Destination   6805 non-null   object  \n",
+      " 5   Age           6809 non-null   float64 \n",
+      " 6   VIP           6800 non-null   object  \n",
+      " 7   RoomService   6801 non-null   float64 \n",
+      " 8   FoodCourt     6796 non-null   float64 \n",
+      " 9   ShoppingMall  6788 non-null   float64 \n",
+      " 10  Spa           6808 non-null   float64 \n",
+      " 11  VRDeck        6809 non-null   float64 \n",
+      " 12  Name          6786 non-null   object  \n",
+      " 13  Transported   6954 non-null   bool    \n",
+      " 14  group         6954 non-null   object  \n",
+      " 15  group_n       6954 non-null   object  \n",
+      " 16  group_size    6954 non-null   int64   \n",
+      " 17  deck          6795 non-null   category\n",
+      " 18  num           6795 non-null   string  \n",
+      " 19  side          6795 non-null   category\n",
+      "dtypes: bool(1), category(2), float64(6), int64(1), object(9), string(1)\n",
+      "memory usage: 1.2+ MB\n",
       "None\n"
      ]
     }
@@ -907,25 +904,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             index          Age   RoomService     FoodCourt  ShoppingMall  \\\n",
-      "count  6954.000000  6809.000000   6801.000000   6796.000000   6788.000000   \n",
-      "mean   4337.655738    28.767367    228.167328    457.455121    177.070566   \n",
-      "std    2510.392605    14.479764    678.074186   1574.283112    621.328736   \n",
-      "min       0.000000     0.000000      0.000000      0.000000      0.000000   \n",
-      "25%    2170.250000    19.000000      0.000000      0.000000      0.000000   \n",
-      "50%    4318.000000    27.000000      0.000000      0.000000      0.000000   \n",
-      "75%    6524.750000    37.000000     49.000000     82.250000     29.000000   \n",
-      "max    8692.000000    79.000000  14327.000000  29813.000000  23492.000000   \n",
+      "               Age   RoomService     FoodCourt  ShoppingMall           Spa  \\\n",
+      "count  6809.000000   6801.000000   6796.000000   6788.000000   6808.000000   \n",
+      "mean     28.767367    228.167328    457.455121    177.070566    312.454759   \n",
+      "std      14.479764    678.074186   1574.283112    621.328736   1155.364951   \n",
+      "min       0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "25%      19.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "50%      27.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "75%      37.000000     49.000000     82.250000     29.000000     62.000000   \n",
+      "max      79.000000  14327.000000  29813.000000  23492.000000  22408.000000   \n",
       "\n",
-      "                Spa        VRDeck   group_size  \n",
-      "count   6808.000000   6809.000000  6954.000000  \n",
-      "mean     312.454759    314.841093     1.812770  \n",
-      "std     1155.364951   1197.617845     1.320072  \n",
-      "min        0.000000      0.000000     1.000000  \n",
-      "25%        0.000000      0.000000     1.000000  \n",
-      "50%        0.000000      0.000000     1.000000  \n",
-      "75%       62.000000     45.000000     2.000000  \n",
-      "max    22408.000000  24133.000000     8.000000  \n"
+      "             VRDeck   group_size  \n",
+      "count   6809.000000  6954.000000  \n",
+      "mean     314.841093     1.812770  \n",
+      "std     1197.617845     1.320072  \n",
+      "min        0.000000     1.000000  \n",
+      "25%        0.000000     1.000000  \n",
+      "50%        0.000000     1.000000  \n",
+      "75%       45.000000     2.000000  \n",
+      "max    24133.000000     8.000000  \n"
      ]
     }
    ],
